feat: Implement product service with caching and user-specific features
- Implemented `ProductService` to handle product operations including add, update, and delete.
- Added caching for product retrieval to improve performance:
  - Caching for individual products (`@Cacheable`).
  - Caching for all products with pagination and sorting.
- Introduced user-specific features:
  - Checked if a product is in the user's wishlist (`isFavorite`).
  - Checked if a product is in the user's cart (`isInCart`).
- Enhanced logging:
  - Added debug logging for product conversion and user context extraction.
  - Logged execution times for product retrieval queries.
- Fixed potential issues with Hibernate object states:
  - Ensured entities are not merged after deletion to prevent `ObjectDeletedException`.
- Updated `CartItem` and `Wishlist` repository methods to efficiently check product existence.
- Updated `Product` entity to persist `isFavorite` status:
  - Removed `@Transient` annotation from `isFavorite` and added it as a persistent field.
  - Updated the database schema to include the `is_favorite` column.
  - Adjusted logic in `addToWishlist` method to ensure `isFavorite` is correctly set and persisted.
  - Implemented logic to set `isFavorite` in user-specific methods.

Last updated: [Insert date and time here]